[project]
name = "api-framework-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.12",
    "jsonschema>=4.24.0",
    "pydantic>=2.11.5",
    "pyjwt>=2.10.1",
    "pytest>=8.4.0",
    "pytest-cov>=6.1.1",
    "pytest-html>=4.1.1",
    "requests>=2.32.3",
    "requests-mock>=1.12.1",
    "sqlalchemy>=2.0.41",
    "uvicorn[standard]>=0.34.3",
]


[tool.pytest.ini_options]
addopts = "-p requests_mock -sv" # Always load the 'requests_mock' plugin and run in verbose mode
markers = [
    "smoke : light-weight subset",
    "auth  : authentication tests"
]
pythonpath = ["utils", "app"] # Adjust the import path if necessary

[tool.black]
line-length = 120

[tool.isort]
line_length = 120

[tool.flake8]
max-line-length = 120
max-complexity = 6
